--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^9.4.1",
+    "csv-parse": "^5.3.1",
     "fs": "^0.0.1-security",
     "geolocation-utils": "^1.2.5",
     "igc-parser": "^1.1.0"
